<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".Calculadora">

    <EditText
        android:id="@+id/txt_numero1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/txt_numero1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_numero2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/txt_numero2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numero1" />

    <RadioGroup
        android:id="@+id/rdOperacoes"
        android:layout_width="364dp"
        android:layout_height="209dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numero2">

        <TextView
            android:id="@+id/txt_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_operacao" />

        <RadioButton
            android:id="@+id/rb_soma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_soma" />

        <RadioButton
            android:id="@+id/rb_subtracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_subtracao" />

        <RadioButton
            android:id="@+id/rb_multiplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiplicacao" />

        <RadioButton
            android:id="@+id/rb_divisao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/rb_divisao" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_botaoCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdOperacoes" />
</androidx.constraintlayout.widget.ConstraintLayout>