<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoContaTelefonica">

    <TextView
        android:id="@+id/lb_assinatura"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lb_assinatura"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/lb_chamadaLocal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lb_chamadaLocal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_assinatura" />

    <TextView
        android:id="@+id/lb_chamadaCelular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lb_chamadaCelular"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_chamadaLocal" />

    <TextView
        android:id="@+id/lb_total"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lb_total"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_chamadaCelular" />

    <TextView
        android:id="@+id/lb_valorAssinatura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lb_assinatura"
        app:layout_constraintStart_toEndOf="@+id/lb_assinatura" />

    <TextView
        android:id="@+id/lb_resultadoChamadaLocal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lb_chamadaLocal"
        app:layout_constraintStart_toEndOf="@+id/lb_chamadaLocal" />

    <TextView
        android:id="@+id/lb_resultadoValorTotal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lb_total"
        app:layout_constraintStart_toEndOf="@+id/lb_total" />

    <TextView
        android:id="@+id/lb_resultadoChamadaCelular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lb_chamadaCelular"
        app:layout_constraintStart_toEndOf="@+id/lb_chamadaCelular" />
</androidx.constraintlayout.widget.ConstraintLayout>